GENERATOR_OUTPUT/manifests/kubeflow-tools/pipelines/patches/patch-ml-pipeline-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline
spec:
  template:
    spec:
      securityContext:
        ## NOTE: this is important for AWS IRSA
        fsGroup: 65534
      containers:
        - name: ml-pipeline-api-server
          readinessProbe:
            ## NOTE: we remove the readinessProbe because this Deployment has only 1 replica,
            ##       so there is never a case when we don't want to at least try and send traffic to the Pod,
            ##       also, the livenessProbe will restart the Pod if it becomes unhealthy,
            ##       and the startupProbe protects the Pod during startup
            $patch: delete
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
