GENERATOR_OUTPUT/manifests/kubeflow-tools/pipelines/patches/patch-metadata-grpc-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-grpc
  namespace: kubeflow
spec:
  gateways:
    - deploykf-istio-gateway/kubeflow-gateway
