GENERATOR_OUTPUT/manifests/kubeflow-tools/pipelines/patches/patch-ml-pipeline-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  gateways:
    - deploykf-istio-gateway/deploykf-gateway
